[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Instances/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Football-ball.png" type="Texture" id=3]
[ext_resource path="res://Assets/Flechas cortas/Flecha 2 Corta 50px.png" type="Texture" id=4]
[ext_resource path="res://Assets/Flechas cortas/Flecha 0 Corta 30px.png" type="Texture" id=5]
[ext_resource path="res://Assets/Flechas cortas/Flecha 1 Corta 50px.png" type="Texture" id=6]
[ext_resource path="res://Assets/Puntas de Flecha/Puntas de flecha - Colores Documento/Punta 2  30px.png" type="Texture" id=7]
[ext_resource path="res://Assets/SpritesheetBlue.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 13.0

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleBall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunBall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 6 ]
}

[node name="Player" type="KinematicBody2D" groups=["Jugador"]]
collision_mask = 0
script = ExtResource( 2 )

[node name="Pos" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -19.0
margin_top = 18.0
margin_right = 21.0
margin_bottom = 32.0
text = "NA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]
width = 5.0
default_color = Color( 0, 1, 0, 1 )

[node name="Spritesheet" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )
hframes = 5
vframes = 4

[node name="Outline" type="Sprite" parent="Spritesheet"]
visible = false
self_modulate = Color( 0, 0, 0, 0.819608 )
show_behind_parent = true
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
hframes = 5
vframes = 4

[node name="Ball" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 0, -34 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" type="Node2D" parent="UI" groups=["UI"]]
visible = false

[node name="ColorRect" type="ColorRect" parent="UI/UI"]
margin_top = 329.0
margin_right = 232.0
margin_bottom = 601.0
color = Color( 1, 0.913725, 0, 0.635294 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="UI/UI"]
margin_left = 8.0
margin_top = 336.0
margin_right = 224.0
margin_bottom = 592.0
color = Color( 0.0941176, 0.0941176, 0.0941176, 0.635294 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Nombre" type="Label" parent="UI/UI"]
margin_left = 17.0
margin_top = 341.0
margin_right = 171.0
margin_bottom = 359.0
text = "EL juebe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocidadLabel" type="Label" parent="UI/UI"]
margin_left = 17.0
margin_top = 417.0
margin_right = 171.0
margin_bottom = 435.0
text = "Velocidad"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="UI/UI"]
margin_left = 192.0
margin_top = 344.0
margin_right = 216.0
margin_bottom = 364.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosPlayer" type="OptionButton" parent="UI/UI"]
margin_left = 17.0
margin_top = 364.0
margin_right = 169.0
margin_bottom = 388.0
text = "NA"
items = [ "NA", null, false, 0, null, "Free Safety", null, false, 1, null, "Outside LineBacker", null, false, 2, null, "Middle LineBacker", null, false, 3, null, "Outside LineBacker", null, false, 4, null, "CornerBack", null, false, 5, null, "Defensive End", null, false, 6, null, "Defensive Tackle", null, false, 7, null, "Wide Receiver", null, false, 8, null, "Offensive Tackle", null, false, 9, null, "Offensive Guard", null, false, 10, null, "Center", null, false, 11, null, "Tight End", null, false, 12, null, "FullBack", null, false, 13, null, "RunningBack", null, false, 14, null, "Strong Safety", null, false, 15, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balon" type="CheckBox" parent="UI/UI"]
margin_left = 17.0
margin_top = 393.0
margin_right = 85.0
margin_bottom = 417.0
text = "Pelota"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="HSlider" parent="UI/UI"]
margin_left = 20.0
margin_top = 435.0
margin_right = 204.0
margin_bottom = 451.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accion" type="OptionButton" parent="UI/UI"]
margin_left = 17.0
margin_top = 459.0
margin_right = 170.0
margin_bottom = 483.0
text = "Moverse Derecha"
items = [ "Nada", null, false, 0, null, "Moverse Derecha", null, false, 1, null, "Moverse Izquierda", null, false, 2, null, "Seguir Linea", null, false, 3, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dibujar" type="Button" parent="UI/UI"]
visible = false
margin_left = 20.0
margin_top = 566.0
margin_right = 116.0
margin_bottom = 586.0
text = "Dibujar Linea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TipoDeLinea" type="OptionButton" parent="UI/UI"]
margin_left = 17.0
margin_top = 494.0
margin_right = 273.0
margin_bottom = 540.0
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 4 )
items = [ "", ExtResource( 4 ), false, 0, null, "", ExtResource( 5 ), false, 1, null, "", ExtResource( 6 ), false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="FollowMouse" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/IdleBall = SubResource( 6 )
anims/RESET = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/RunBall = SubResource( 7 )

[node name="Punta" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="Point" type="Node2D" parent="."]

[connection signal="pressed" from="UI/UI/Exit" to="." method="_on_Exit_pressed"]
[connection signal="item_selected" from="UI/UI/PosPlayer" to="." method="_on_PosPlayer_item_selected"]
[connection signal="toggled" from="UI/UI/Balon" to="." method="_on_Balon_toggled"]
[connection signal="value_changed" from="UI/UI/Speed" to="." method="_on_Speed_value_changed"]
[connection signal="item_selected" from="UI/UI/Accion" to="." method="_on_Accion_item_selected"]
[connection signal="pressed" from="UI/UI/Dibujar" to="." method="_on_Dibujar_pressed"]
[connection signal="item_selected" from="UI/UI/TipoDeLinea" to="." method="_on_TipoDeLinea_item_selected"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="FollowMouse" to="." method="_on_FollowMouse_timeout"]
